feat: Add new DTOs and update DashboardService and DashboardController for enhanced metrics and reporting